--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,131 @@
-flask==0.12.2
-flask_restful==0.3.6
-flask_script==2.0.6
-flask_migrate==2.1.1
+aiodns==2.0.0
+aiohttp==3.5.4
+alembic==1.0.11
+aniso8601==7.0.0
+argcomplete==1.10.0
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==19.1.0
+bbox==0.8.2
+beautifulsoup4==4.7.1
+boltons==16.5.1
+boto==2.48.0
+boto3==1.9.0
+boto3-extensions==0.12.1
+botocore==1.12.16
+certifi==2018.4.16
+cffi==1.12.3
+chardet==3.0.4
+click==6.6
+coverage==4.5.1
+crcmod==1.7
+cryptography==2.7
+datadog==0.20.0
+decorator==4.4.0
+defusedxml==0.6.0
+docutils==0.14
+entrypoints==0.3
+fasteners==0.15
+flake8==3.7.7
+Flask==0.12.2
+flask-marshmallow==0.8.0
+Flask-Migrate==2.1.1
+Flask-RESTful==0.3.6
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+freezegun==0.3.7
+future==0.17.1
+gapic-google-logging-v2==0.9.3
+gapic-google-pubsub-v1==0.9.3
+gcs-oauth2-boto-plugin==2.4
+google-api-python-client==1.6.2
+google-apitools==0.5.28
+google-cloud==0.19.0
+google-gax==0.13.0
+google-reauth==0.1.0
+googleapis-common-protos==1.6.0
+grpc-google-logging-v2==0.9.3
+grpc-google-pubsub-v1==0.9.3
+grpcio==1.21.1
+gsutil==4.34
+gunicorn==19.9.0
+henry==0.1.3
+httplib2==0.13.0
+idna==2.7
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jira==2.0.0
+jmespath==0.9.4
+jsonschema==3.0.1
+lookerapi==3.0.0
+Mako==1.0.13
+-e git+https://github.com/mapswipe/python-mapswipe-workers.git@061844e69492f6a59c3c069164d3d89c897128d7#egg=mapswipe_workers
+MarkupSafe==1.1.1
 marshmallow==2.14.0
-flask_sqlalchemy==2.3.2
-flask_marshmallow==0.8.0
 marshmallow-sqlalchemy==0.13.2
+mccabe==0.6.1
+mmh3==2.5.1
+mock==2.0.0
+monotonic==1.5
+multidict==4.5.2
+ndg-httpsclient==0.5.1
+netaddr==0.7.19
+numpy==1.16.4
+oauth2client==4.1.2
+oauthlib==3.0.1
+optimizely-sdk==2.0.0
+pbr==3.1.1
+Pillow==6.0.0
+planar==0.4
+ply==3.8
+protobuf==3.8.0
 psycopg2==2.7.5
+psycopg2-binary==2.8.2
+pyasn1==0.4.5
+pyasn1-modules==0.2.5
+pycares==3.0.0
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.1
+PyJWT==1.7.1
+PyMySQL==0.9.3
+pyOpenSSL==19.0.0
+pyquaternion==0.9.5
+pyrsistent==0.15.2
+pyshp==2.1.0
+python-builtwith==0.2.2
+python-dateutil==2.8.0
+python-editor==1.0.4
+python-gflags==3.1.2
+python-http-client==3.1.0
+pytz==2019.1
+pyu2f==0.1.4
+PyYAML==3.12
+requests==2.19.1
+requests-oauthlib==1.2.0
+requests-toolbelt==0.9.1
+retry-decorator==1.1.0
+rsa==4.0
+s3transfer==0.1.13
+sendgrid==5.4.1
+Shapely==1.6.4.post2
+simple-salesforce==0.73.0
+simplejson==3.16.0
+six==1.12.0
+slackclient==2.0.1
+SocksiPy-branch==1.1
+soupsieve==1.9.1
+SQLAlchemy==1.3.4
+tabulate==0.8.3
+tqdm==4.32.1
+trailmix==0.8.4
+unicodecsv==0.14.1
+uritemplate==3.0.0
+urllib3==1.23
+virtualenv==16.6.0
+Werkzeug==0.15.4
+yarl==1.3.0
+zdesk==2.4.0
+zope.component==4.3.0
+zope.event==4.2.0
+zope.interface==4.3.3
