--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aniso8601==7.0.0
 argcomplete==1.10.0
 asn1crypto==0.24.0
 async-timeout==3.0.1
+atomicwrites==1.3.0
 attrs==19.1.0
 bbox==0.8.2
 beautifulsoup4==4.7.1
@@ -13,6 +14,8 @@ boto==2.48.0
 boto3==1.9.0
 boto3-extensions==0.12.1
 botocore==1.12.16
+CacheControl==0.12.5
+cachetools==3.1.1
 certifi==2018.4.16
 cffi==1.12.3
 chardet==3.0.4
@@ -26,6 +29,7 @@ defusedxml==0.6.0
 docutils==0.14
 entrypoints==0.3
 fasteners==0.15
+firebase-admin==2.17.0
 flake8==3.7.7
 Flask==0.12.2
 flask-marshmallow==0.8.0
@@ -38,11 +42,17 @@ future==0.17.1
 gapic-google-logging-v2==0.9.3
 gapic-google-pubsub-v1==0.9.3
 gcs-oauth2-boto-plugin==2.4
+google-api-core==1.13.0
 google-api-python-client==1.6.2
 google-apitools==0.5.28
+google-auth==1.6.3
 google-cloud==0.19.0
+google-cloud-core==1.0.2
+google-cloud-firestore==1.3.0
+google-cloud-storage==1.16.1
 google-gax==0.13.0
 google-reauth==0.1.0
+google-resumable-media==0.3.2
 googleapis-common-protos==1.6.0
 grpc-google-logging-v2==0.9.3
 grpc-google-pubsub-v1==0.9.3
@@ -52,6 +62,7 @@ gunicorn==19.9.0
 henry==0.1.3
 httplib2==0.13.0
 idna==2.7
+importlib-metadata==0.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jira==2.0.0
@@ -67,6 +78,8 @@ mccabe==0.6.1
 mmh3==2.5.1
 mock==2.0.0
 monotonic==1.5
+more-itertools==7.1.0
+msgpack==0.6.1
 multidict==4.5.2
 ndg-httpsclient==0.5.1
 netaddr==0.7.19
@@ -74,13 +87,16 @@ numpy==1.16.4
 oauth2client==4.1.2
 oauthlib==3.0.1
 optimizely-sdk==2.0.0
+packaging==19.0
 pbr==3.1.1
 Pillow==6.0.0
 planar==0.4
+pluggy==0.12.0
 ply==3.8
 protobuf==3.8.0
 psycopg2==2.7.5
 psycopg2-binary==2.8.2
+py==1.8.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycares==3.0.0
@@ -90,9 +106,11 @@ pyflakes==2.1.1
 PyJWT==1.7.1
 PyMySQL==0.9.3
 pyOpenSSL==19.0.0
+pyparsing==2.4.0
 pyquaternion==0.9.5
 pyrsistent==0.15.2
 pyshp==2.1.0
+pytest==4.6.3
 python-builtwith==0.2.2
 python-dateutil==2.8.0
 python-editor==1.0.4
@@ -107,6 +125,7 @@ requests-toolbelt==0.9.1
 retry-decorator==1.1.0
 rsa==4.0
 s3transfer==0.1.13
+schedule==0.6.0
 sendgrid==5.4.1
 Shapely==1.6.4.post2
 simple-salesforce==0.73.0
@@ -123,9 +142,12 @@ unicodecsv==0.14.1
 uritemplate==3.0.0
 urllib3==1.23
 virtualenv==16.6.0
+wcwidth==0.1.7
 Werkzeug==0.15.4
+xdg==4.0.0
 yarl==1.3.0
 zdesk==2.4.0
+zipp==0.5.2
 zope.component==4.3.0
 zope.event==4.2.0
 zope.interface==4.3.3
