--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ gunicorn==19.9.0
 henry==0.1.3
 httplib2==0.13.0
 idna==2.7
+idna-ssl==1.1.0
 importlib-metadata==0.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -97,6 +98,7 @@ protobuf==3.8.0
 psycopg2==2.7.5
 psycopg2-binary==2.8.2
 py==1.8.0
+py-dotenv==0.1
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycares==3.0.0
@@ -137,6 +139,9 @@ soupsieve==1.9.1
 SQLAlchemy==1.3.4
 tabulate==0.8.3
 tqdm==4.32.1
+trailmix==0.8.4
+typing==3.7.4
+typing-extensions==3.7.4
 unicodecsv==0.14.1
 uritemplate==3.0.0
 urllib3==1.23
